<resources>
    <string name="app_name">foodTracker</string>
    <string name="button_addEntry">Add Entry</string>
    <string name="hint_entryTitle">Meal Type</string>
    <string name="hint_entryDescription">Food Name</string>
    <string name="hint_entryKcal">Number of Kcals </string>
    <string name="hint_entryDate">Date </string>
    <string name="hint_entryTime">Time </string>

    <string name="menu_addEntry">Add</string>
    <string name="menu_cancelEntry">Cancel</string>
    <string name="enter_entry_title"> Please enter a Entry Title </string>
    <string name="save_entry"> Save Entry </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_entry_image">Select entry image</string>
    <string name="change_entry_image">Change entry image</string>
    <string name="label_title"> Title: </string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_map">Map</string>
    <string name="button_deleteEntry">Delete Entry</string>
    <string name="choose_theme_text">choose theme</string>


</resources>